Fixing rendering bug for non-attached repositories. Icon was not grayed out, when the repository was not attached.